--- a/web/dashboard/admin/administrators.html
+++ b/web/dashboard/admin/administrators.html
@@ -3,8 +3,212 @@
 <head>
     <meta charset="UTF-8">
     <title>Administrators</title>
+
+    <!-- Font-awesome CSS File -->
+    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css"/>
+    <!-- Twitter Bootstrap 3 CSS File -->
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+
+    <!-- jQuery JS File -->
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/angular/angular.min.js"></script>
+    <script src="../vendor/bower/layer/layer.js"></script>
+    <script src="../node_modules/jquery-validation/dist/jquery.validate.js"></script>
+
+    <script src="../lib.js"></script>
 </head>
-<body>
-Administrators
+<body ng-app="admin" ng-controller="AdminCtrl">
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Administrators</h3>
+    </div>
+    <div class="panel-body">
+        <button class="btn btn-default" ng-click="create()">
+            <span class="fa fa-plus"> Create Administrator</span>
+        </button>
+        <hr/>
+        <table class="table table-striped table-bordered table-hover table-responsive">
+            <thead>
+            <tr>
+                <th>Username</th>
+                <th>Role</th>
+                <th>Created At</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="o in objects">
+                <td><span ng-bind="o.username"></span></td>
+                <td><span ng-bind="o.role.description"></span></td>
+                <td><span ng-bind="o.created_at"></span></td>
+                <td>
+                    <span class="btn fa fa-edit" ng-click="update(o)"></span>
+                    <span class="btn fa fa-trash" ng-click="remove(o)"></span>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div id="form_dlg" style="padding: 30px;display:none">
+    <form class="form-horizontal" method="post">
+        <div class="form-group">
+            <label class="col-sm-3 control-label">Username</label>
+
+            <div class="col-sm-8">
+                <input name="username" ng-model="form.username" type="text" class="form-control"
+                       minlength="3"   ng-readonly="!isCreate"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">Password</label>
+
+            <div class="col-sm-8">
+                <input id="password" name="password" ng-model="form.password" type="password" class="form-control"
+                       minlength="6" ng-required="isCreate"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">Confirm Password</label>
+
+            <div class="col-sm-8">
+                <input name="password2" ng-model="form.password2" type="password" class="form-control"
+                       minlength="6" equalTo="#password" ng-required="isCreate" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">Roles</label>
+
+            <div class="col-sm-8">
+                <div class="checkbox" ng-repeat="role in roles">
+                    <label>
+                        <input type="radio" name="role" value="{{role.name}}"
+                               ng-checked="role.name == form.role.name"/>
+                        <span ng-bind="role.description"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-3 col-sm-8">
+                <input type="submit" ng-click="validate()" class="btn btn-default"/>
+            </div>
+        </div>
+    </form>
+</div>
+
+<script>
+    Identity.loginRequired();
+
+    var app = angular.module('admin', []);
+    var save_url = {
+        url: '',
+        method: ''
+    };
+
+    var dlg;
+
+    app.controller('AdminCtrl', function ($scope, $http) {
+        // Load Data
+        $scope.load = function () {
+            layer.load(1);
+            API.call({url: '/administrators', method: 'get'})
+                    .success(function (data, status) {
+                        $scope.objects = data;
+                        $scope.$apply();
+                        layer.closeAll('loading');
+                    });
+            API.call({url: '/roles', method: 'get'})
+                    .success(function (data, status) {
+                        $scope.roles = data;
+                        $scope.$apply();
+                    });
+        };
+        $scope.load();
+
+        // Create Data
+        $scope.create = function () {
+            $scope.form = {};
+
+            $scope.isCreate = true;
+            dlg = layer.open({
+                title: 'Create',
+                type: 1,
+                skin: 'layui-layer-rim',
+                area: ['500px', '600px'],
+                shadeClose: true,
+                content: $("#form_dlg")
+            });
+            save_url = {
+                url: '/administrators',
+                method: 'post'
+            };
+        };
+
+        // Update Data
+        $scope.update = function (o) {
+            $scope.form = o;
+
+            $scope.isCreate = false;
+            dlg = layer.open({
+                title: 'Update',
+                type: 1,
+                skin: 'layui-layer-rim',
+                area: ['500px', '600px'],
+                shadeClose: true,
+                content: $("#form_dlg")
+            });
+
+            save_url = {
+                url: '/administrators/' + o.uid,
+                method: 'put'
+            };
+        };
+
+        // Remove Data
+        $scope.remove = function (o) {
+            layer.confirm('Are you sure to delete this?', function () {
+                layer.closeAll();
+                layer.load(1);
+                API.call({url: '/administrators/' + o.uid, method: 'delete'})
+                        .success(function () {
+                            layer.msg('Successfully');
+                            $scope.load();
+                        })
+                        .complete(function (res) {
+                            layer.closeAll('loading');
+                        });
+            });
+        };
+
+        $scope.validate = function(){
+            if($scope.form.password != $scope.form.password2){
+                layer.msg('The confirm password must equal to password',{shift:6});
+                $scope.form.password = '';
+                $scope.form.password2 = '';
+            }
+        };
+    });
+
+    $("#form_dlg form").submit(function () {
+        layer.load(1);
+        API.call({url: save_url.url, method: save_url.method, data: $(this).serialize()})
+                .success(function (data, status) {
+                    layer.close(dlg);
+                    layer.msg('Successfully');
+                    angular.element($('[ng-controller]')).scope().load();
+                })
+                .error(function (res, text) {
+                    var data = res.responseJSON;
+                    layer.msg(data[0].message);
+                })
+                .complete(function (res) {
+                    layer.closeAll('loading');
+                });
+        return false;
+    });
+</script>
+
 </body>
 </html>
