--- a/public/web/index.html
+++ b/public/web/index.html
@@ -5,91 +5,150 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Application in Gen</title>
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="site.css" rel="stylesheet">
+    <link href="node_modules/swiper/dist/css/swiper.min.css" rel="stylesheet"/>
+    <link href="node_modules/animate.css/animate.min.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet">
+
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/swiper/dist/js/swiper.jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-
 <div class="wrap">
-    <nav id="w0" class="navbar-inverse navbar-fixed-top navbar" role="navigation">
+    <nav class="navbar-default navbar-fixed-top navbar  animated fadeInDown" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#w0-collapse"><span
-                        class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span></button>
                 <a class="navbar-brand" href="index.html">Gen</a></div>
-            <div id="w0-collapse" class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse">
                 <ul id="w1" class="navbar-nav navbar-right nav">
                     <li class="active"><a href="index.html">Home</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="site-index">
+    <!-- Slider main container -->
+    <div class="swiper-container">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+                <div class="container animated fadeInUp">
+                    <div class="jumbotron">
+                        <h1>Welcome to come here!</h1>
 
-            <div class="jumbotron">
-                <h1>Welcome to come here!</h1>
+                        <p class="lead">You have successfully created your Gen-powered application.</p>
 
-                <p class="lead">You have successfully created your Gen-powered application.</p>
-
-                <p><a class="btn btn-lg btn-success" href="../dashboard/login.html">Getting start!</a></p>
-            </div>
-
-            <div class="body-content">
-
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h2>Contest of efficiency and quality</h2>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip
-                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu
-                            fugiat nulla pariatur.</p>
-
-                    </div>
-                    <div class="col-lg-4">
-                        <h2>Automation module management</h2>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip
-                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu
-                            fugiat nulla pariatur.</p>
-
-                    </div>
-                    <div class="col-lg-4">
-                        <h2>Rich module library</h2>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et
-                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip
-                            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu
-                            fugiat nulla pariatur.</p>
-
+                        <p><a class="btn btn-lg btn-success" href="../dashboard/login.html">Getting start!</a></p>
                     </div>
                 </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-offset-1 col-md-5">
+                            <h1>RESTful Prefer</h1>
 
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                                nisi
+                                ut aliquip
+                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                cillum dolore eu
+                                fugiat nulla pariatur.</p>
+
+                        </div>
+                        <div class="col-md-5">
+                            <h1>Centralized Access Control</h1>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                                nisi
+                                ut aliquip
+                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                cillum dolore eu
+                                fugiat nulla pariatur.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-offset-1 col-md-5">
+                            <h1>Modularization</h1>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                                nisi
+                                ut aliquip
+                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                cillum dolore eu
+                                fugiat nulla pariatur.</p>
+
+                        </div>
+                        <div class="col-md-5">
+                            <h1>Event-driven</h1>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                                nisi
+                                ut aliquip
+                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                cillum dolore eu
+                                fugiat nulla pariatur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-offset-2 col-md-8">
+                            <h1>Generation Based Auto-programming </h1>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                                nisi
+                                ut aliquip
+                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                cillum dolore eu
+                                fugiat nulla pariatur.</p>
+
+                        </div>
+                    </div>
+
+                    <footer class="footer">
+                        <div class="container">
+                            <p class="pull-left">&copy; Gen 2016</p>
+
+                            <p class="pull-right">Powered by Gen.</p>
+                        </div>
+                    </footer>
+                </div>
             </div>
         </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
     </div>
 </div>
 
-<footer class="footer">
-    <div class="container">
-        <p class="pull-left">&copy; Gen 2016</p>
-
-        <p class="pull-right">Powered by Gen.</p>
-    </div>
-</footer>
-
+<script>
+    var mySwiper = new Swiper('.swiper-container', {
+        direction: 'vertical',
+        pagination: '.swiper-pagination',
+        mousewheelControl: true
+    });
+</script>
 </body>
 </html>
