--- a/public/dashboard/admin/administrators.html
+++ b/public/dashboard/admin/administrators.html
@@ -52,13 +52,13 @@
 </div>
 
 <div id="form_dlg" style="padding: 30px;display:none">
-    <form class="form-horizontal" method="post">
+    <form class="form-horizontal" method="post" ng-submit="save()">
         <div class="form-group">
             <label class="col-sm-3 control-label">Username</label>
 
             <div class="col-sm-8">
                 <input name="username" ng-model="form.username" type="text" class="form-control"
-                       minlength="3" ng-readonly="!isCreate"/>
+                       minlength="3" ng-readonly="!isCreate" ng-required="isCreate"/>
             </div>
         </div>
         <div class="form-group">
@@ -92,7 +92,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-3 col-sm-8">
-                <input type="submit" ng-click="validate()" class="btn btn-default"/>
+                <input type="submit" class="btn btn-default"/>
             </div>
         </div>
     </form>
@@ -196,27 +196,26 @@
             });
         };
 
-        $scope.validate = function () {
+        $scope.save = function () {
             if ($scope.form.password != $scope.form.password2) {
                 layer.msg('The confirm password must equal to password', {shift: 6});
                 $scope.form.password = '';
                 $scope.form.password2 = '';
+                return false;
             }
+            layer.load(1);
+            API.call({url: save_url.url, method: save_url.method, data: $("#form_dlg form").serialize()})
+                    .success(function (data, status) {
+                        layer.close(dlg);
+                        layer.msg('Successfully');
+                        $scope.load();
+                    })
+                    .error(error)
+                    .complete(closeLoadingLayer);
+            return false;
         };
     });
 
-    $("#form_dlg form").submit(function () {
-        layer.load(1);
-        API.call({url: save_url.url, method: save_url.method, data: $(this).serialize()})
-                .success(function (data, status) {
-                    layer.close(dlg);
-                    layer.msg('Successfully');
-                    angular.element($('[ng-controller]')).scope().load();
-                })
-                .error(error)
-                .complete(closeLoadingLayer);
-        return false;
-    });
 </script>
 
 </body>
