--- a/public/dashboard/admin/reset-password.html
+++ b/public/dashboard/admin/reset-password.html
@@ -42,7 +42,7 @@
             <div class="form-group">
 
                 <div class="col-sm-offset-3 col-sm-6">
-                    <input class="btn btn-primary" type="submit" value="Submit" />
+                    <input class="btn btn-primary" type="submit" value="Submit"/>
                 </div>
             </div>
         </form>
@@ -57,7 +57,6 @@
         API.call({url: '/administrators/' + uid, method: 'get'})
                 .success(function (data) {
                     $scope.form = data;
-                    console.log($scope.form);
                     $scope.form.password = '';
                     $scope.form.password2 = '';
                     $scope.$apply();
@@ -73,9 +72,7 @@
                     .success(function (data) {
                         layer.msg('Successfully');
                     })
-                    .error(function (res) {
-                        layer.msg('Error');
-                    });
+                    .error(API.error);
         };
     });
 </script>
