--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -21,7 +21,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- AdminLTE JS File -->
     <script src="node_modules/admin-lte/dist/js/app.min.js"></script>
-
+    <script src="vendor/bower/layer/layer.js"></script>
     <!-- App JS Files -->
     <script src="lib.js"></script>
 
@@ -67,7 +67,7 @@
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="#"
+                                    <a href="admin/reset-password.html"
                                        target="sub-container"
                                        class="btn btn-default btn-flat">
                                         Reset Password
@@ -144,7 +144,9 @@
 
 <script>
     Identity.loginRequired();
-
+    layer.config({
+        offset: '150px'
+    });
     var app = angular.module('gen', []);
     app.controller('MainCtrl', function ($scope, $http) {
         var uid = Identity.getUserId();
